frormat: use math.clamp